# cleo_web

./: .gitignore  README.md  antplots.py  manage.py  pyproject.toml
.github/ISSUE_TEMPLATE/: task.md
cleo_web/: asgi.py  db_routers.py  settings.py  urls.py  wsgi.py
devex/: apps.py  urls.py  views.py
devex/static/css/: pygments.css
devex/templates/devex/: antenna.html  base.html  devex.html  get_antenna.html  get_antenna_main.html  get_device.html  get_messages.html  get_messages_main.html  get_project.html  get_script.html  get_script_status.html  get_state.html  get_status.html  help.html  history_detail.html  history_detailstatus.html  home.html  messages.html  navbar.html  param_value.html  sampler_value.html  script.html  status.html
devex/templatetags/: devex.py
~venvs/cleo_web_py3.11_rhel7/: pyvenv.cfg
